@@ -211,7 +211,7 @@ termination of a utility (e.g. command line option syntax error).
 .PP
 When the \fI\-\-json\fR option is given and no errors are detected, then
 only JSON is sent to stdout. If the 'o' control character is in the \fIJO\fR
-argument to the \fI\-\-json\fR option, then the former "human readable" 
+argument to the \fI\-\-json\fR option, then the former "human readable"
 output is placed in a JSON array named "output" within a JSON object
 named "utility_invoked". Each line of the former "human readable" output
 is placed in its own element of the JSON array named "output".
@@ -285,7 +285,7 @@ Report bugs to <dgilbert at interlog dot com>.
 Copyright \(co 2022 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2 or the BSD\-2\-Clause
-license. There is NO warranty; not even for MERCHANTABILITY or 
+license. There is NO warranty; not even for MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
 .B sg3_utils(sg3_utils), smartctl(smartmontools)
