@@ -1,4 +1,4 @@
-.TH SG_DD "8" "May 2022" "sg3_utils\-1.48" SG3_UTILS
+.TH SG_DD "8" "August 2022" "sg3_utils\-1.48" SG3_UTILS
 .SH NAME
 sg_dd \- copy data to and from files and devices, especially SCSI
 devices
@@ -139,9 +139,10 @@ issued and no copy takes place.
 \fBdio\fR={0|1}
 default is 0 which selects indirect (buffered) IO on sg devices. Value of 1
 attempts direct IO which, if not available, falls back to indirect IO and
-notes this at completion. If direct IO is selected and /proc/scsi/sg/allow_dio
-has the value of 0 then a warning is issued (and indirect IO is performed).
-For finer grain control use 'iflag=dio' or 'oflag=dio'.
+notes this at completion. If direct IO is selected and
+/sys/module/sg/parameters/allow_dio has the value of 0 then a warning is
+issued (and indirect IO is performed). For finer grain control
+use 'iflag=dio' or 'oflag=dio'.
 .TP
 \fBibs\fR=\fIBS\fR
 if given must be the same as \fIBS\fR given to 'bs=' option.
@@ -333,8 +334,8 @@ utility. See note about READ LONG below.
 dio
 request the sg device node associated with this flag does direct IO. If direct
 IO is not available, falls back to indirect IO and notes this at completion.
-If direct IO is selected and /proc/scsi/sg/allow_dio has the value of 0 then a
-warning is issued (and indirect IO is performed).
+If direct IO is selected and /sys/module/sg/parameters/allow_dio has the
+value of 0 then a warning is issued (and indirect IO is performed).
 .TP
 direct
 causes the O_DIRECT flag to be added to the open of \fIIFILE\fR and/or
@@ -470,7 +471,7 @@ This is called "indirect IO" and there is a 'dio' option to
 select "direct IO" which will DMA directly into user memory. Due to some
 issues "direct IO" is disabled in the sg driver and needs a
 configuration change to activate it. This is typically done
-with 'echo 1 > /proc/scsi/sg/allow_dio'.
+with 'echo 1 > /sys/module/sg/parameters/allow_dio'.
 .PP
 All informative, warning and error output is sent to stderr so that
 dd's output file can be stdout and remain unpolluted. If no options
@@ -484,8 +485,7 @@ A raw device must be bound to a block device prior to using sg_dd.
 See
 .B raw(8)
 for more information about binding raw devices. To be safe, the sg device
-mapping to SCSI block devices should be checked with 'cat /proc/scsi/scsi',
-or sg_map before use.
+mapping to SCSI block devices should be checked with sg_map before use.
 .PP
 Disk partition information can often be found with
 .B fdisk(8)
