@@ -707,7 +707,7 @@ Using sg_turs(8) and sg_readcap(8) after the format operation may be wise.
 The Unix convention is that "no news is good news" but that can be a bit
 unnerving after an operation like format, especially if it finishes
 quickly (i.e. before the first progress poll is sent). Giving the
-\fI\-\-verbose\fR option once should supply enough additional output to 
+\fI\-\-verbose\fR option once should supply enough additional output to
 settle those nerves.
 .SH AUTHORS
 Written by Grant Grundler, James Bottomley and Douglas Gilbert.
