@@ -73,7 +73,7 @@ called devfsd whose default configuration adds back the
 Linux device names in their traditional positions.
 .PP
 Quite often the mapping information can be derived by
-observing the output of the command: "cat /proc/scsi/scsi".
+observing the output of the command: "sg_map".
 However if devices have been added since boot this can
 be deceptive.
 .PP
