@@ -148,7 +148,7 @@ static struct pollfd in_pollfd_arr[MAX_NUM_THREADS];
 static struct pollfd out_pollfd_arr[MAX_NUM_THREADS];
 static int dd_count = -1;
 
-static const char * proc_allow_dio = "/proc/scsi/sg/allow_dio";
+static const char * sg_allow_dio = "/sys/module/sg/parameters/allow_dio";
 
 static int sg_finish_io(int wr, Rq_elem * rep);
 
@@ -1214,11 +1214,11 @@ main(int argc, char * argv[])
 
         fprintf(stderr, ">> Direct IO requested but incomplete %d times\n",
                 rcoll.dio_incomplete);
-        if ((fd = open(proc_allow_dio, O_RDONLY)) >= 0) {
+        if ((fd = open(sg_allow_dio, O_RDONLY)) >= 0) {
             if (1 == read(fd, &c, 1)) {
                 if ('0' == c)
                     fprintf(stderr, ">>> %s set to '0' but should be set "
-                            "to '1' for direct IO\n", proc_allow_dio);
+                            "to '1' for direct IO\n", sg_allow_dio);
             }
             close(fd);
         }
