@@ -388,7 +388,7 @@ static sigset_t signal_set;
 static sigset_t orig_signal_set;
 static pthread_t sig_listen_thread_id;
 
-static const char * proc_allow_dio = "/proc/scsi/sg/allow_dio";
+static const char * sg_allow_dio = "/sys/module/sg/parameters/allow_dio";
 
 static void sg_in_rd_cmd(struct global_collection * clp, Rq_elem * rep,
                          mrq_arr_t & def_arr);
@@ -661,12 +661,12 @@ page4:
             "each issued\nSCSI command. When both IFILE and OFILE are sg "
             "devices, then the READ in\neach read-write pair is issued an "
             "even pack_id and its WRITE pair is\ngiven the pack_id one "
-            "higher (i.e. an odd number). This enables a\n'cat '"
-            "/proc/scsi/sg/debug' user to see that progress is being "
+            "higher (i.e. an odd number). This enables a\n'dmesg -w' "
+            "user to see that progress is being "
             "made.\n\n");
     pr2serr("Debugging:\n"
             "Apart from using one or more '--verbose' options which gets a "
-            "bit noisy\n'cat /proc/scsi/sg/debug' can give a good overview "
+            "bit noisy\n'dmesg -w' can give a good overview "
             "of what is happening.\nThat does a sg driver object tree "
             "traversal that does minimal locking\nto make sure that each "
             "traversal is 'safe'. So it is important to note\nthe whole "
@@ -679,7 +679,7 @@ page4:
             "request entered it while some other nodes were being "
             "printed.\n\n");
     pr2serr("Busy state:\n"
-            "Busy state (abbreviated to 'bsy' in the /proc/scsi/sg/debug "
+            "Busy state (abbreviated to 'bsy' in the dmesg "
             "output)\nis entered during request setup and completion. It "
             "is intended to be\na temporary state. It should not block "
             "but does sometimes (e.g. in\nblock_get_request()). Even so "
@@ -1259,7 +1259,7 @@ sig_listen_thread(void * v_clp)
                     } else
                         pr2serr_lk("%s: subsequent stall at pack_id=%d\n",
                                __func__, pack_id);
-                    system_wrapper("/usr/bin/cat /proc/scsi/sg/debug\n");
+                    system_wrapper("/usr/bin/dmesg\n");
                 } else
                     prev_pack_id = pack_id;
             } else if (EAGAIN != err)
@@ -3753,7 +3753,7 @@ bypass:
         }
     }
     t = 1;
-    res = ioctl(fd, SG_SET_DEBUG, &t);  /* more info in /proc/scsi/sg/debug */
+    res = ioctl(fd, SG_SET_DEBUG, &t);  /* more info in the kernel log */
     if (res < 0)
         perror("sgs_dd: SG_SET_DEBUG error");
     return (res < 0) ? 0 : num;
@@ -5041,11 +5041,11 @@ fini:
 
         pr2serr(">> Direct IO requested but incomplete %d times\n",
                 clp->dio_incomplete_count.load());
-        if ((fd = open(proc_allow_dio, O_RDONLY)) >= 0) {
+        if ((fd = open(sg_allow_dio, O_RDONLY)) >= 0) {
             if (1 == read(fd, &c, 1)) {
                 if ('0' == c)
                     pr2serr(">>> %s set to '0' but should be set to '1' for "
-                            "direct IO\n", proc_allow_dio);
+                            "direct IO\n", sg_allow_dio);
             }
             close(fd);
         }
